<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">testSmartITOMAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_login">Login</string>
    <string name="username">用户名 :</string>
    <string name="password">密&#160;&#160;&#160;&#160;码 :</string>
    <string name="server_address_change">服务器地址表更</string>
    <string name="keep_logined">保持登陆</string>
    <string name="login">登陆</string>
    <string name="nav_function">导航功能</string>
    <string name="my_attetion">我的关注</string>
    <string name="tools_box">工具箱</string>
    <string name="setting">设置</string>
    <string name="title_activity_nav">Nav</string>
    <string name="title_activity_my_attetion">MyAttetion</string>
    <string name="title_activity_tools_box">ToolsBox</string>
    <string name="title_activity_setting">Setting</string>
    <string name="message_manage">消息管理</string>
    <string name="driver_info">设备信息</string>
    <string name="alert_deal">告警处理</string>
    <string name="link_manage">链路管理</string>
    <string name="TDC_scan">二维扫描</string>
    <string name="order_deal">工单管理</string>

</resources>
